Implemented several collider types